--- a/cosmoship/package.json
+++ b/cosmoship/package.json
@@ -14,8 +14,9 @@
   "devDependencies": {
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
-    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "classnames": "^2.5.1",
     "msw": "^2.7.4",
     "vite": "^6.2.5",
     "vite-tsconfig-paths": "^5.1.4"
@@ -29,7 +30,7 @@
     "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.1",
+    "react-router-dom": "^6.30.0",
     "zustand": "^5.0.3"
   },
   "msw": {
