--- a/cosmoship/tsconfig.json
+++ b/cosmoship/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "build",
     "jsx": "react-jsx",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "moduleResolution": "Bundler",
     "module": "esnext",
     "esModuleInterop": true,
@@ -10,7 +11,18 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "strict": false,
+    "noImplicitAny": true,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "alwaysStrict": false,
+    "target": "ESNext",
+    "allowJs": true,
+    "checkJs": false,
+    "skipLibCheck": true,
+    "useUnknownInCatchVariables": false,
+    "resolveJsonModule": true
   },
   "ts-node": {
     "compilerOptions": {
