--- a/cosmoship/package.json
+++ b/cosmoship/package.json
@@ -26,11 +26,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "jotai": "^2.12.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
+    "redux-persist": "^6.0.0",
     "zustand": "^5.0.3"
   },
   "msw": {
