--- a/cosmoship/package.json
+++ b/cosmoship/package.json
@@ -27,6 +27,7 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.7.0",
+    "@xstate/react": "^5.0.3",
     "axios": "^1.8.4",
     "jotai": "^2.12.3",
     "react": "^19.1.0",
@@ -34,6 +35,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.0",
     "redux-persist": "^6.0.0",
+    "xstate": "^5.19.2",
     "zustand": "^5.0.3"
   },
   "msw": {
